--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-first-react",
+  "name": "react-starting-template",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
